--- a/assessment.html
+++ b/assessment.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link text-light" href="/assessment.html">Assessments</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="#">Academic Research Activities</a>
+            </li>
           </ul>  
           <ul class="navbar-nav right">
             <li class="nav-item logout">
