--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li class="nav-item">
               <a class="nav-link text-light" href="/assessment.html">Assessments</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="#">Academic Research Activities</a>
+            </li>
           </ul>  
           <ul class="navbar-nav right">
             <li class="nav-item logout">
@@ -74,16 +77,13 @@
             <label for="" class="form-label text-primary">Degree Type</label>
             <select class="form-select border-blue" id="select-degree-type">
               <option selected>Select degree type</option>
-              <option value="1">Undergraduate</option>
-              <option value="2">Postgraduate</option>
+              <option value="Undergraduate">Undergraduate</option>
+              <option value="Postgraduate">Postgraduate</option>
             </select>
           </div>
            <div class="col-md-12">
             <label for="" class="form-label text-primary">Module</label>
-            <select class="form-select border-blue" id="select-degree-module">
-              <option selected>Select Module</option>
-              <option value=""></option>
-            </select>
+            <input type="text" class="form-control text-primary border-blue" id="create-degree-module" placeholder="Enter module name">
           </div>
           <div class="col-md-12">
             <label for="" class="form-label text-primary">Learning Outcome</label>
